--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@ input, button { font-size:16px; padding:10px; margin:10px 0; width:100%; box-siz
 <!-- LIBRARIES (ORDER MATTERS) -->
 <script src="js/buffer.min.js"></script>
 <script src="js/bip32.min.js"></script>
-<script src="js/bitcoinjs.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bitcoinjs-lib-browser@5.1.7/bitcoinjs.min.js"></script>
 
 <script>
 /* ================================
