--- a/compiler.html
+++ b/compiler.html
@@ -82,7 +82,7 @@
                 urls: [
                     'https://cdn.jsdelivr.net/npm/bip32@2.0.6/src/bip32.min.js',
                     'https://unpkg.com/bip32@2.0.6/src/bip32.min.js',
-                    'https://bundle.run/bip32@2.0.6'
+                    'https:github.com/blankworker1/BYOB/blob/main/js/bip32.min.js'
                 ],
                 check: () => typeof bip32 !== 'undefined'
             },
