--- a/compiler.html
+++ b/compiler.html
@@ -6,7 +6,7 @@
 {
   "imports": {
     "bip32": "https://esm.sh/bip32@5.2.0",
-    "tiny-secp256k1": "https://esm.sh/tiny-secp256k1@2.2.3"
+    "tiny-secp256k1": "https://esm.sh/tiny-secp256k1@2.2.3",
     "bitcoinjs-lib": "https://esm.sh/bitcoinjs-lib@6.1.0"
   }
 }
@@ -388,7 +388,8 @@
         }
 
 
-
+    </script>
+    
       <script type="module">
         import * as ecc from "tiny-secp256k1";
         import { BIP32Factory } from "bip32";
